# workout-buddy

./: .gitignore  .npmrc  IMPLEMENTATION_PLAN.md  README.md  SETUP.md  claude.md  docker-compose.yml  package.json  pnpm-lock.yaml  vercel.json
.claude/: README.md
.claude/commands/: commit.md  new-feature.md
.claude/guides/: pre-commit-hooks.md
.claude/skills/client/: SKILL.md
.claude/skills/code-review/: SKILL.md
.claude/skills/docker-setup/: SKILL.md
.claude/skills/git-workflow/: SKILL.md
.claude/skills/server/: SKILL.md
.claude/skills/test-driven-dev/: SKILL.md
.husky/: pre-commit
client/: .env.example  .eslintrc.json  .gitignore  .prettierignore  .prettierrc  index.html  package.json  vite.config.ts
client/src/: App.tsx  index.css  main.tsx  routes.tsx  test-precommit.ts
client/src/__tests__/: App.integration.test.tsx
client/src/features/auth/constants/: auth.constants.ts
client/src/features/auth/hooks/: useAuth.ts  useAuthInitialization.ts
client/src/features/auth/services/: authService.ts
client/src/features/auth/store/: authStore.ts
client/src/features/auth/types/: auth.errors.ts  auth.types.ts
client/src/features/auth/utils/: tokenRefresh.ts  tokenStorage.ts  tokenValidation.ts  userHelpers.ts
client/src/features/exercises/components/: ExerciseCard.tsx  ExerciseSelector.tsx
client/src/features/exercises/constants/: exerciseTypes.ts
client/src/locales/: i18n.ts
client/src/locales/en/: auth.json  common.json  exercises.json  home.json  statistics.json
client/src/locales/es/: auth.json  common.json  exercises.json  home.json  statistics.json
client/src/locales/hi/: auth.json  common.json  exercises.json  home.json  statistics.json
client/src/pages/: AuthCallbackPage.tsx  HomePage.tsx  LoginPage.tsx
client/src/shared/components/: LanguageSwitcher.tsx  LoadingScreen.tsx
client/src/shared/contexts/: ThemeContext.tsx
client/src/shared/utils/: apiClient.ts  logger.ts  telemetry.ts
client/src/test/: i18n-test-setup.ts  setup.ts
docs/: ARCHITECTURE.md  README.md
docs/adr/: 001-mediapipe-for-pose-detection.md  002-react-vite-frontend.md  003-fastapi-backend.md  004-postgresql-database.md  005-monorepo-structure.md  006-jwt-authentication.md  007-docker-containerization.md  008-tailwindcss-styling.md  009-vercel-railway-hosting.md  010-feature-based-structure.md  011-pre-commit-hooks-setup.md  012-root-level-pre-commit-hooks.md  README.md  TEMPLATE.md
docs/architecture/: API_ENDPOINTS.md  DATABASE_SCHEMA.md  README.md  SYSTEM_ARCHITECTURE.md
docs/archive/: exercise-buddy-architecture-v1.md
docs/guides/: ALEMBIC_MIGRATIONS_GUIDE.md  BACKEND_IMPLEMENTATION_PLAN.md  DARK_MODE_IMPLEMENTATION.md  DEPLOYMENT.md  DEVELOPMENT.md  FRONTEND_SETUP.md  FRONTEND_SETUP_CHECKLIST.md  FRONTEND_SETUP_SUMMARY.md  GOOGLE_OAUTH_SETUP.md  PRE_COMMIT_SETUP.md  REACT_FUNDAMENTALS.md  README.md  TESTING.md  auth-security-compliance.md  oauth-integration.md
server/: .env.example  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  README.md  alembic.ini  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: ab52a8c0fcb8_add_workouts_table_with_foreign_key_to_.py  b5fa6c4653db_initial_migration_users_table.py
server/app/: __init__.py  main.py  test_bandit_check.py  test_precommit.py  test_precommit_errors.py  test_security.py
server/app/core/config/: base_settings.py  oauth_settings.py  security_settings.py  settings.py
server/app/core/health/: __init__.py  checks.py
server/app/core/logging/: config.py
server/app/core/middleware/: error_handler.py  request_logging.py  security.py
server/app/core/oauth/: __init__.py  google_provider.py  oauth_dto.py  oauth_exceptions.py  oauth_factory.py  oauth_validator.py  provider_interface.py
server/app/core/security/: jwt_handler.py  password_handler.py  token_models.py
server/app/db/: base.py  session.py
server/app/features/auth/: __init__.py  dependencies.py  exceptions.py  transformers.py
server/app/features/auth/models/: __init__.py  user.py
server/app/features/auth/repositories/: __init__.py  base_repository.py  user_repository.py
server/app/features/auth/routes/: __init__.py  oauth_routes.py
server/app/features/auth/schemas/: __init__.py  oauth_schemas.py  token_schemas.py  user_schemas.py
server/app/features/auth/services/: __init__.py  oauth_service.py  token_service.py  user_service.py
server/app/features/statistics/: dependencies.py
server/app/features/statistics/calculators/: personal_records_calculator.py  summary_calculator.py  weekly_calculator.py
server/app/features/statistics/routes/: statistics_routes.py
server/app/features/statistics/schemas/: statistics_schemas.py
server/app/features/statistics/services/: statistics_service.py
server/app/features/workouts/: dependencies.py
server/app/features/workouts/models/: workout.py
server/app/features/workouts/repositories/: workout_repository.py
server/app/features/workouts/routes/: workout_routes.py
server/app/features/workouts/schemas/: workout_schemas.py
server/app/features/workouts/services/: workout_service.py
server/app/features/workouts/validators/: workout_validator.py
(+19 files in other folders)
