[project]
name = "workout-buddy-api"
version = "1.0.0"
description = "Enterprise AI-powered exercise counter API"
requires-python = ">=3.14"
package = false
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[argon2]>=1.7.4",
    "python-multipart>=0.0.20",
    "python-dotenv>=1.0.0",
    "authlib>=1.4.0",
    "httpx>=0.28.0",
    "slowapi>=0.1.9",
    "python-json-logger>=3.2.0",
    "email-validator>=2.3.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.1",
    "mypy>=1.14.0",
    "bandit>=1.8.0",
    "pre-commit>=4.5.0",
    "pip-audit>=2.7.3",
    "detect-secrets>=1.5.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "A", "S"]
ignore = [
    "E501",
    "B008", # Support FastAPI dependency injection
    "S105", # Stop flagging 'TOKEN_URL' as a secret
    "S106"  # Stop flagging 'token_type="bearer"' as a secret
]

[tool.mypy]
python_version = "3.13"
strict = true
disallow_untyped_defs = true
ignore_missing_imports = true
disallow_untyped_decorators = false # Essential for FastAPI @app.get()
mypy_path = "."

[tool.bandit]
exclude_dirs = [".venv", "tests", "alembic/versions"]
skips = ["B101"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
